--- a/construction.html
+++ b/construction.html
@@ -150,10 +150,10 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a href="#" class="sub-marker"> Florales <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="premium-slides.html"> Premium Slides </a></li>
-                                                    <li><a href="slider-left-aligned.html"> Left Aligned </a></li>
-                                                    <li><a href="slider-center-aligned.html"> Center Aligned </a></li>
-                                                    <li><a href="slider-right-aligned.html"> Right Aligned </a></li>
+                                                    <li><a href="premium-slides.html"> Rock rose </a></li>
+                                                    <li><a href="slider-left-aligned.html"> Mimulus </a></li>
+                                                    <li><a href="slider-center-aligned.html"> Cherry Plum </a></li>
+                                                    <li><a href="slider-right-aligned.html"> Aspen </a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
