--- a/construction.html
+++ b/construction.html
@@ -157,13 +157,13 @@
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
-                                                <a href="#" class="sub-marker"> Maderales <i class="icon-ios-more icn-right"></i></a>
+                                                <a href="#" class="sub-marker"> Amaderadas <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="features-left-overlay.html"> Left Overlay </a></li>
-                                                    <li><a href="features-right-overlay.html"> Right Overlay </a></li>
-                                                    <li><a href="features-left-push.html"> Left Push </a></li>
-                                                    <li><a href="features-right-push.html"> Right Push </a></li>
-                                                    <li><a href="features-side-panel-colored.html"> Colored </a></li>
+                                                    <li><a href="features-left-overlay.html"> Madera de Sándalo </a></li>
+                                                    <li><a href="features-right-overlay.html"> Notas de Oriente </a></li>
+                                                    <li><a href="features-left-push.html"> Higos del Mediterráneo </a></li>
+                                                    <li><a href="features-right-push.html"> Hespérides </a></li>
+                                                    <li><a href="features-side-panel-colored.html"> Hojas de Té </a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
