Cambios Página Web
Aquí se encuentran las incrustaciones de todas las imágenes y los cambios de textos

--- a/team.html
+++ b/team.html
@@ -348,7 +348,7 @@
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
                                 <h1 class="visual-title visual-sub-title">Meet the Team</h1>
-                                <p>UwU.</p>
+                                <p>We are the perfect and specialized team you need for greater performance in design!.</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
@@ -366,10 +366,11 @@
                     <section class="content-block">
                         <div class="container">
                             <div class="heading bottom-space text-center">
-                                <h2>Learn. <span>Acheive.</span> Admire</h2>
+                                <h2>Learn. <span>Trust.</span> Start</h2>
                             </div>
                             <div class="description text-center">
-                                <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+                                <p>With determination and work you can be part of our team. Where we will test your creative abilities. We take into account all talents and accept all possible ideas, where the main tool is passion.
+                                    Sometimes it just takes a good team to start creating. </p>
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
@@ -379,8 +380,8 @@
                                         </div>
                                         <figcaption class="team-des-v2">
                                             <span class="sub">Founder / CEO</span>
-                                            <strong class="content-title name">Nicola Gorani</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <strong class="content-title name">Deborah Feldman</strong>
+                                            <p>She is an American-German writer currently living in Berlin, Germany. She is known for her 2012 autobiography, Unorthodox: The Scandalous Rejection of My Hasidic Roots. The Netflix original miniseries Unorthodox is inspired by Feldman's autobiography. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -390,9 +391,9 @@
                                             <img src="img/team-05.jpg" alt="images description">
                                         </div>
                                         <figcaption class="team-des-v2">
-                                            <span class="sub">Founder / CEO</span>
-                                            <strong class="content-title name">Jeremi Stralt</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <span class="sub">Animator / CEO</span>
+                                            <strong class="content-title name">Pentleton Ward</strong>
+                                            <p>He is a producer, screenwriter, animator, and voice actor who works for Cartoon Network and Frederator Studios. He is known for creating the six-time Emmy Award-winning series Adventure Time, The Midnight Gospel, and the internet series Bravest Warriors in 2012. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -403,8 +404,8 @@
                                         </div>
                                         <figcaption class="team-des-v2">
                                             <span class="sub">Web Programmer</span>
-                                            <strong class="content-title name">Colin Nizurb</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <strong class="content-title name">Bill Gates</strong>
+                                            <p>William Henry Gates III, known as Bill Gates, is an American businessman, computer scientist, and philanthropist, known for having created and founded, together with Paul Allen, the Microsoft company. Similarly, he is known for having created, also with Paul Allen, the operating system for Windows computers. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -414,9 +415,9 @@
                                             <img src="img/team-09.jpg" alt="images description">
                                         </div>
                                         <figcaption class="team-des-v2">
-                                            <span class="sub">Founder / CEO</span>
-                                            <strong class="content-title name">Darren Donovan</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <span class="sub">Graphic Designer / CEO</span>
+                                            <strong class="content-title name">Storm Thorgerson</strong>
+                                            <p>He was a British graphic designer, recognized for being a member of the artistic design group Hipgnosis, in which he designed some of the best known album covers and singles. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -427,8 +428,8 @@
                                         </div>
                                         <figcaption class="team-des-v2">
                                             <span class="sub">Visual Design Guru</span>
-                                            <strong class="content-title name">Ina Brettan</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <strong class="content-title name">Vivienne Medrano</strong>
+                                            <p>Also known as Vivziepop, she is a Salvadoran-American artist and entertainer. She is the creator, director, lead animator, lead writer, storyboard artist, character designer, and producer of Hazbin Hotel and Helluva Boss. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -439,8 +440,8 @@
                                         </div>
                                         <figcaption class="team-des-v2">
                                             <span class="sub">Web Programmer</span>
-                                            <strong class="content-title name">Leona Mattur</strong>
-                                            <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                            <strong class="content-title name">Mark Zuckerberg</strong>
+                                            <p>He is an American programmer and businessman, one of the creators and founders of Facebook and the homonymous social network, and its current president. </p>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -451,7 +452,7 @@
                         <div class="container">
                             <div class="inner-wrapper">
                                 <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
-                                <h2 class="text-white">Thinking of joing a winning team?</h2>
+                                <h2 class="text-white">Ready to join the best design team in history?</h2>
                                 <div class="btn-container">
                                     <a href="#" class="btn btn-primary">VIEW VACANCIES</a>
                                 </div>
