--- a/construction.html
+++ b/construction.html
@@ -106,7 +106,7 @@
                                     <li class="dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Inicio"> Inicio </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Infromación general </a></li>
+                                            <li><a href="index.html"> Información general </a></li>
                                             <li><a href="design-studio.html"> Personalización </a></li>
                                             <li><a href="digital-agency.html"> Diseños </a></li>
                                             <li><a href="construction.html"> Velas </a></li>
@@ -167,18 +167,17 @@
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
-                                                <a href="#" class="sub-marker"> Citronela <i class="icon-ios-more icn-right"></i></a>
+                                                <a href="#" class="sub-marker"> Plantas <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="features-slide-bg.html"> Slide BG </a></li>
-                                                    <li><a href="features-image-bg.html"> Image BG </a></li>
-                                                    <li><a href="features-parallax-bg.html"> Parallax BG </a></li>
-                                                    <li><a href="features-video-bg.html"> Video BG </a></li>
-                                                    <li><a href="features-google-map-bg.html"> Google Map </a></li>
-                                                    <li><a href="features-colored-bg.html"> Colored BG </a></li>
-                                                    <li><a href="features-light-bg.html"> Light BG </a></li>
-                                                    <li><a href="features-dark-bg.html"> Dark BG </a></li>
-                                                    <li><a href="features-fullscreen-bg.html"> Full Screen </a></li>
-                                                    <li><a href="features-contained-bg.html"> Contained </a></li>
+                                                    <li><a href="features-slide-bg.html"> Ajedrea </a></li>
+                                                    <li><a href="features-image-bg.html"> Ciprés </a></li>
+                                                    <li><a href="features-parallax-bg.html"> Espliego </a></li>
+                                                    <li><a href="features-video-bg.html"> Hinojo </a></li>
+                                                    <li><a href="features-google-map-bg.html"> Lavanda </a></li>
+                                                    <li><a href="features-colored-bg.html"> Lavandín </a></li>
+                                                    <li><a href="features-light-bg.html"> Mejorana </a></li>
+                                                    <li><a href="features-dark-bg.html"> Cistus </a></li>
+                                                    
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
