--- a/construction.html
+++ b/construction.html
@@ -192,12 +192,12 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a href="#" class="sub-marker"> Tranqulizantes <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="signin.html"> Sign In </a></li>
-                                                    <li><a href="signup.html"> Sign Up </a></li>
-                                                    <li><a href="forgot-password.html"> Forgot Password </a></li>
-                                                    <li><a href="new-password.html"> New Password </a></li>
-                                                    <li><a href="confirm-email.html"> Email Confirmation </a></li>
-                                                    <li><a href="registration-success.html"> Registration Success </a></li>
+                                                    <li><a href="signin.html"> Naranja dulce </a></li>
+                                                    <li><a href="signup.html"> Geranio </a></li>
+                                                    <li><a href="forgot-password.html"> Bergamota </a></li>
+                                                    <li><a href="new-password.html"> Ylang-ylang </a></li>
+                                                    <li><a href="confirm-email.html"> Manzana verde </a></li>
+                            
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
