--- a/construction.html
+++ b/construction.html
@@ -203,11 +203,11 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a href="#" class="sub-marker"> Pasionales <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="features-header-search.html"> Header Search </a></li>
-                                                    <li><a href="features-transparent-bg-search.html"> Transparent BG </a></li>
-                                                    <li><a href="features-light-bg-search.html"> Light BG </a></li>
-                                                    <li><a href="features-dark-bg-search.html"> Dark BG </a></li>
-                                                    <li><a href="features-colored-bg-search.html"> Colored BG </a></li>
+                                                    <li><a href="features-header-search.html"> Jazmín </a></li>
+                                                    <li><a href="features-transparent-bg-search.html"> Jengibre </a></li>
+                                                    <li><a href="features-light-bg-search.html"> Jengibre </a></li>
+                                                    <li><a href="features-dark-bg-search.html"> Jengibre </a></li>
+                                                    <li><a href="features-colored-bg-search.html"> Vainilla </a></li>
                                                 </ul>
                                             </li>
                                         </ul>
