--- a/construction.html
+++ b/construction.html
@@ -119,10 +119,10 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#"> Dulces <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="header-v1.html"> Cítricas </a></li>
-                                                    <li><a href="header-v2.html"> Cítricas </a></li>
-                                                    <li><a href="header-v3.html"> Elegantes </a></li>
-                                                    <li><a href="header-v4.html"> Pasionales </a></li>
+                                                    <li><a href="header-v1.html"> Miel </a></li>
+                                                    <li><a href="header-v2.html"> Toffee </a></li>
+                                                    <li><a href="header-v3.html"> Caramelo </a></li>
+                                                    <li><a href="header-v4.html"> Galleta María </a></li>
                                                     
                                                 </ul>
                                             </li>
