--- a/construction.html
+++ b/construction.html
@@ -129,9 +129,9 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#"> Elegantes <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="features-simple-mega.html"> Simple Mega </a></li>
-                                                    <li><a href="features-with-image.html"> With Image</a></li>
-                                                    <li><a href="features-with-video.html"> With Video </a></li>
+                                                    <li><a href="features-simple-mega.html"> Rosas </a></li>
+                                                    <li><a href="features-with-image.html"> Canela </a></li>
+                                                    <li><a href="features-with-video.html"> Romero </a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
