--- a/design-studio.html
+++ b/design-studio.html
@@ -552,7 +552,7 @@
                     </section>
                     <section class="content-block portfolio-block pt-0" id="container">
                         <div class="bottom-space text-center text-uppercase">
-                            <h2>The Work</h2>
+                            <h2>Artesanias colombianas</h2>
                         </div>
                         <ul class="filter-nav text-center button-group filter-button-group">
                             <li>
