--- a/design-studio.html
+++ b/design-studio.html
@@ -556,7 +556,7 @@
                         </div>
                         <ul class="filter-nav text-center button-group filter-button-group">
                             <li>
-                                <button data-filter="*">ALL</button>
+                                <button data-filter="*">CERAMICA</button>
                             </li>
                             <li>
                                 <button data-filter=".ui">UI/UX DESIGN</button>
