--- a/construction.html
+++ b/construction.html
@@ -213,7 +213,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Portfolio </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Registro </a>
                                         <ul class="dropdown-menu no-border-radius">
                                             <li class="dropdown dropdown-left dropdown-parent">
                                                 <a class="sub-marker" href="#"> No Sidebar <i class="icon-ios-more icn-right"></i></a>
@@ -240,13 +240,11 @@
                                                     <li><a href="portfolio-right-sidebar-4-col.html"> 4 Column </a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="portfolio-masonary.html"> Masonary </a></li>
-                                            <li><a href="portfolio-full-width.html">  Full Width </a></li>
-                                            <li><a href="portfolio-full-width-spaced.html">  Full Spaced</a></li>
-                                            <li><a href="portfolio-3-col.html"> Boxed </a></li>
-                                            <li><a href="portfolio-single.html"> Single V1 </a></li>
-                                            <li><a href="portfolio-single-v2.html">  Single V2 </a></li>
-                                            <li><a href="portfolio-single-v3.html"> Single V3 </a></li>
+                                            <li><a href="portfolio-masonary.html"> Registrarse </a></li>
+                                            <li><a href="portfolio-full-width.html">  Iniciar sesión </a></li>
+                                            <li><a href="portfolio-full-width-spaced.html"> ¿olvidó  su contrseñsa? </a></li>
+                                            <li><a href="portfolio-3-col.html"> Confirmación de email </a></li>
+                                            
                                         </ul>
                                     </li>
                                     <li class="dropdown dropdown-full-width-g" data-animation="fadeIn">
