--- a/construction.html
+++ b/construction.html
@@ -310,44 +310,44 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="contact.html"> Contact </a>
+                                        <a href="contact.html"> Contacto </a>
                                     </li>
                                     <li class="dropdown cart-list margin-0-sm">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"><span class="hidden-lg-up"> Shopping Cart </span><i class="custom-icon-cart m-marker"></i></a>
                                         <div class="dropdown-menu-container">
                                             <div class="dropdown-menu no-border-radius col-lg-1 col-md-4 col-sm-4">
-                                                <h4> Shopping Cart </h4>
+                                                <h4> Carrito de compras </h4>
                                                 <ul class="s-list no-padding">
                                                     <li class="row">
                                                         <div class="col-lg-4 col-md-4 col-sm-5 col">
                                                             <div class="img">
-                                                                <a href="#"><img src="img/img-02.jpg" alt="image description"></a>
+                                                                <a href="#"><img src="img/Vela sándalo.jpg" alt="image description"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-8 col-md-8 col-sm-7 col">
-                                                            <h6> <a href="#"><strong>Product 1 </strong></a><span class="text-muted float-right"> x 1 </span></h6>
-                                                            <h6> $199 </h6>
+                                                            <h6> <a href="#"><strong>Vela - sándalo </strong></a><span class="text-muted float-right"> x 1 </span></h6>
+                                                            <h6> $2.600 </h6>
                                                         </div>
                                                     </li>
                                                     <li class="divider"></li>
                                                     <li class="row">
                                                         <div class="col-lg-4 col-md-4 col-sm-5 col">
                                                             <div class="img">
-                                                                <a href="#"><img src="img/img-02.jpg" alt="image description"></a>
+                                                                <a href="#"><img src="img/Vela ajedrea.jpg" alt="image description"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-8 col-md-8 col-sm-7 col">
-                                                            <h6> <a href="#"><strong>Product 2 </strong></a><span class="text-muted float-right"> x 2 </span></h6>
-                                                            <h6> $199 </h6>
+                                                            <h6> <a href="#"><strong> Vela - ajedrea </strong></a><span class="text-muted float-right"> x 2 </span></h6>
+                                                            <h6> $2.600 </h6>
                                                         </div>
                                                     </li>
                                                     <li class="divider margin-bottom-1"></li>
                                                     <li class="row">
                                                         <div class="col-lg-4 col-md-4 col-sm-5 col">
-                                                            <h2> Total </h2>
+                                                            <h2> Total: </h2>
                                                         </div>
                                                         <div class="col-lg-8 col-md-8 col-sm-7 col">
-                                                            <h2 class="text-right"> $3300 </h2>
+                                                            <h2 class="text-right"> $5.200 </h2>
                                                         </div>
                                                     </li>
                                                     <li><a href="#" class="btn btn-sm btn-block btn-secondary btn-mina btn-mina-rip-br"> View Cart </a></li>
