--- a/construction.html
+++ b/construction.html
@@ -350,7 +350,7 @@
                                                             <h2 class="text-right"> $5.200 </h2>
                                                         </div>
                                                     </li>
-                                                    <li><a href="#" class="btn btn-sm btn-block btn-secondary btn-mina btn-mina-rip-br"> View Cart </a></li>
+                                                    <li><a href="#" class="btn btn-sm btn-block btn-secondary btn-mina btn-mina-rip-br"> Ver carrito </a></li>
                                                 </ul>
                                             </div>
                                         </div>
