--- a/construction.html
+++ b/construction.html
@@ -291,10 +291,10 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="about.html"> About </a>
+                                        <a href="about.html"> Foro </a>
                                     </li>
                                     <li>
-                                        <a href="team.html"> Team </a>
+                                        <a href="team.html"> Asesoría </a>
                                     </li>
                                     <li class="dropdown right-dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Movimientos artísticos </a>
